crates/account-macro/tests/account_attribute/enum.fail.stderr
error: Invalid account type
 --> tests/account_attribute/enum.fail.rs:9:1
  |
9 | pub enum TestState {
  | ^^^
